# EigenGuard

./: .gitignore  README.md  coding_strategy.md  implementation_plan.md
eigen_guard/: .metadata  LOYIHA_HOLATI.md  LOYIHA_HOLATI_2026-05-17.md  README.md  implementation_plan.md  pubspec.yaml  texnik_topshiriq.md
eigen_guard/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
eigen_guard/android/app/: build.gradle.kts
eigen_guard/lib/: main.dart
eigen_guard/lib/core/: app_theme.dart
eigen_guard/lib/ffi/: native_engine.dart
eigen_guard/lib/models/: edge_sensor_reading.dart  external_sensor_reading.dart  material_profile.dart  measurement_record.dart  mesh_3d.dart
eigen_guard/lib/screens/: ai_chat_screen.dart  dashboard_screen.dart  digital_twin_screen.dart  history_screen.dart  monitoring_screen.dart  nexus_login_screen.dart  settings_screen.dart
eigen_guard/native/: CMakeLists.txt
eigen_guard/native/include/: approximation_processor.h  ffi_bridge.h  fft_processor.h  kalman_filter.h  optical_flow.h  spline_processor.h
eigen_guard/native/src/: approximation_processor.cpp  ffi_bridge.cpp  fft_processor.cpp  kalman_filter.cpp  optical_flow.cpp  spline_processor.cpp
eigen_guard/native/tests/: test_spline.cpp
eigen_guard/windows/: CMakeLists.txt
nexus/: .env.example  README.md  TEST_PLAN.md  docker-compose.yml
nexus/backend/: .dockerignore  Dockerfile  requirements.txt
nexus/frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+89 files in other folders)
